[project]
name = "langgraph-v1-tutorial"
version = "0.2.0"
description = "Ultimate LangGraph Tutorial written in Korean"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.3.1",
    "jupyter>=1.1.1",
    "langchain>=1.2.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.6",
    "langchain-anthropic>=1.3.0",
    "langchain-ollama>=1.0.1",
    "langchain-tavily>=0.2.16",
    "langchain-teddynote>=0.5.4",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-postgres>=3.0.2",
    "langgraph-checkpoint-redis>=0.3.1",
    "matplotlib>=3.10.7",
    "mcp>=1.21.0",
    "notebook>=7.4.7",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary,pool]>=3.2.12",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "pdfplumber>=0.11.9",
    "faiss-cpu>=1.13.2",
    "arxiv>=2.4.0",
    "pymupdf>=1.27.1",
]
